fixed tweetPrevActions visibility

--- a/src/assets/css/UserIntroductionCSS.css
+++ b/src/assets/css/UserIntroductionCSS.css
@@ -86,3 +86,10 @@
     font-weight: 700;
     color: rgb(20, 23, 26);
 }
+
+@media (max-width: 310px){
+    .follow-numbers-container div{
+        display: inline-block;
+        padding-right: 15px;
+    }
+}
